# MSP430_Clion_demo

./: .gitignore  CMakeLists.txt
Core/: main.c
Drivers/deprecated/IAR/: msp430xgeneric.h
Drivers/driverlib/5xx_6xx/: adc10.c  adc10.h  adc10b.c  adc10b.h  adc12.c  adc12.h  adc12b.c  adc12b.h  aes.c  aes.h  aes256.c  aes256.h  bat.c  bat.h  compb.c  compb.h  compd.c  compd.h  crc.c  crc.h  cs.c  cs.h  cs_a.c  cs_a.h  dac12.c  dac12.h  dma.c  dma.h  ei2c.c  ei2c.h  espi.c  espi.h  euart.c  euart.h  euart_baudrate.c  euart_baudrate.h  flash.c  flash.h  fram.c  fram.h  (+38 more)
Drivers/inc/: hw_memmap.h  hw_types.h
